--- a/calculator.html
+++ b/calculator.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html><html><head>
     <title>Calculator</title><meta charset="utf-8">
     <script type="text/javascript">
+
+function cuadrado() {
+     var num = document.getElementById("n1");
+     num.value = Math.pow(num.value, 2);
+    }
     function cube() {
      var num = document.getElementById("n1");
      num.value = Math.pow(num.value, 3);
@@ -17,6 +22,7 @@
      Number:
      <input type="text" id="n1">
      <p>
+    <button onclick="cuadrado()"> x^2 </button>
      <button onclick="cube()"> x^3 </button>
      <button onclick="seno()"> sin(x) </button>
      </p>
