--- a/calculator.html
+++ b/calculator.html
@@ -15,6 +15,11 @@ function cuadrado() {
      num.value = Math.sin(num.value);
     }
 
+
+    function inverse() {
+     var num = document.getElementById("n1");
+     num.value = 1/num.value;
+    }
     </script>
     </head>
     <body>
@@ -25,6 +30,7 @@ function cuadrado() {
     <button onclick="cuadrado()"> x^2 </button>
      <button onclick="cube()"> x^3 </button>
      <button onclick="seno()"> sin(x) </button>
+     <button onclick="inverse()"> 1/x </button>
      </p>
     </body>
     </html>
